--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-streamlit
-pandas
+streamlit==1.29.0
+pandas==2.1.4
+anthropic==0.19.1
+farm-haystack==1.23.0
+openpyxl==3.1.2
+python-dotenv==1.0.0
+asyncio==3.4.3
+nltk
